--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,3 +2,14 @@ logging:
   level:
     root: DEBUG
 
+spring:
+  datasource:
+    url: jdbc:postgresql://127.0.0.1:5432/movieR
+    username: postgres
+    password: erikeva2
+    driver-class-name: org.postgresql.Driver
+    hikari:
+      max-lifetime: 580000
+    jpa:
+     show-sql: true
+     open-in-view: false
